--- a/React-Origamid/01-JavaScript_Basico/part-02/module/index.html
+++ b/React-Origamid/01-JavaScript_Basico/part-02/module/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JS Básico - 01</title>
+    <title>JS Básico - 02</title>
 </head>
 
 <body>
-    <script src="./script.js"></script>
+    <script type="module" src="./script.js"></script>
 </body>
 </html>
